Minor visual improvements - removed lorem ipsum

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -22,21 +22,21 @@
         <div class="carousel-item active">
             <img class="d-block w-100" src="~/Images/Carrousel/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>World Cap!</h5>
+                <h5>World Cup!</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="~/Images/Carrousel/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>We love Football!</h5>
+                <h5>Experienced player or just a football enthusiast?</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="~/Images/Carrousel/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Ball Court easy to find!</h5>
+                <h5>Part of a team, league or simply playing with friends?</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
@@ -66,8 +66,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h2 class="page-item text-center form-text">FIND SOMEHWERE TO PLAY</h2>
-            <p class="text-center">Find football facilities in a range of cities across the Greece<br />Choose a pitch!</p>
+            <h2 class="page-item text-center form-text">BOOK YOUR COURT</h2>
+            <p class="text-center">Choose between a variety of football facilities all around Greece<br />Choose a pitch!</p>
         </div>
     </div>
     <div class="row d-flex justify-content-around ">
