--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -45,10 +45,11 @@
             <!-- Grid column -->
             <div class="col-md-8 col-12 mt-5 text-secondary">
                 <p style="line-height: 1.7rem;">
-                    Το Lorem Ipsum είναι απλά ένα κείμενο χωρίς νόημα για τους επαγγελματίες της τυπογραφίας και στοιχειοθεσίας.
-                    Το Lorem Ipsum είναι το επαγγελματικό πρότυπο όσον αφορά το κείμενο χωρίς νόημα, από τον 15ο αιώνα, όταν ένας ανώνυμος τυπογράφος
-                    πήρε ένα δοκίμιο και ανακάτεψε τις λέξεις για να δημιουργήσει ένα δείγμα βιβλίου. Όχι μόνο επιβίωσε πέντε αιώνες,
-                    αλλά κυριάρχησε στην ηλεκτρονική στοιχειοθεσία, παραμένοντας με κάθε τρόπο αναλλοίωτο.
+                    BookYourCourt begun as an academic project of a 5-member team, that evolved into a life work project.
+                    Bounded by our common passion, football, we created an easy-to-use website, where experienced players,
+                    formed teams and football enthusiasts can find their nearest court to play!
+                    Thanks for showing interest in our website. Recommendations and suggestions are most welcomed! If you wish to 
+                    be a part of our netword, fill in the registration form and one of us will contact you shortly!
                 </p>
             </div>
             <!-- Grid column -->
