more visual improvements, the site has a name now

--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -49,7 +49,7 @@
                     Bounded by our common passion, football, we created an easy-to-use website, where experienced players,
                     formed teams and football enthusiasts can find their nearest court to play!
                     Thanks for showing interest in our website. Recommendations and suggestions are most welcomed! If you wish to 
-                    be a part of our netword, fill in the registration form and one of us will contact you shortly!
+                    be a part of our network, fill in the registration form and one of us will contact you shortly!
                 </p>
             </div>
             <!-- Grid column -->
