--- a/TeamProject/Views/Shared/_NavBarPartial.cshtml
+++ b/TeamProject/Views/Shared/_NavBarPartial.cshtml
@@ -2,7 +2,7 @@
 
 
 <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark test">
-    @Html.ActionLink("TeamProject", "Index", "Home", new { area = "" }, new { @class = "navbar-brand font-italic" })
+    @Html.ActionLink("BookYourCourt", "Index", "Home", new { area = "" }, new { @class = "navbar-brand font-italic" })
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
