add bookkey info

--- a/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
@@ -32,6 +32,12 @@
         <dd>
             @Html.DisplayFor(model => model.User.Email)
         </dd>
+        <dd>
+            @Html.DisplayFor(model => model.BookKey)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.BookKey)
+        </dt>
         <dt>
             @Html.DisplayNameFor(model => model.BookedAt)
         </dt>
