--- a/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
@@ -35,6 +35,12 @@
             @Html.DisplayNameFor(model => model.BookedAt)
         </dt>
         <dd>
+            @Html.DisplayFor(model => model.BookKey)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.BookKey)
+        </dt>
+        <dd>
             @Html.DisplayFor(model => model.BookedAt)
         </dd>
         <dt>
@@ -46,6 +52,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to Bookings", "Index", new { id = ViewBag.BranchId })
 </p>
