Configured Contact Page
experimented with contact page css and contact form

--- a/TeamProject/Views/Home/Contact.cshtml
+++ b/TeamProject/Views/Home/Contact.cshtml
@@ -1,17 +1,43 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+<h5>@ViewBag.Message</h5>
+
+<div class="container">
+    <div style="text-align:center">
+
+    </div>
+
+    <div class="row">
+        <div class="column">
+            <img src="~/Images/Contact/HQ.bmp" style="width:auto"/>
+        </div>
+        <div class="column">
+            <form>
+                <label for="fname">First Name</label>
+                <input type="text" placeholder="Type your name"
+            </form>
+
+        </div>
+
+    </div>
+
+</div>
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Omonoia 39<br />
+    Athina 105 64, Greece<br />
+    <abbr title="Phone">Phone:</abbr>
+    801-11-BookYourCourt
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Fryni Boukouvala:</strong> <a href="mailto:fryniboukouvala@gmail.com">fryniboukouvala@gmail.com</a><br />
+    <strong>Giorgos Xiros:</strong>   <a href="mailto:geo.xiros@gmail.com">geo.xiros@gmail.com</a><br />
+    <strong>Giorgos Lymperopoulos:</strong> <a href="mailto:lympe7@hotmail.com">lympe7@hotmail.com</a><br />
+    <strong>Giorgos Chaniotakis:</strong> <a href="mailto:haniotinho@gmail.com">haniotinho@gmail.com</a><br />
+    <strong>Giorgos Kalomalos:</strong> <a href="mailto:giorgos.kalomalos@gmail.com">giorgos.kalomalos@gmail.com</a>
+
 </address>
