--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -85,7 +85,7 @@
                     <a data-pin-do="buttonPin" data-pin-tall="true" style="width:30%" data-pin-round="true" href="https://www.pinterest.com/pin/create/button/?url=https%3A%2F%2Fwww.flickr.com%2Fphotos%2Fkentbrew%2F6851755809%2F&media=https%3A%2F%2Ffarm8.staticflickr.com%2F7027%2F6851755809_df5b2051c9_z.jpg&description=Next%20stop%3A%20Pinterest"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_round_red_32.png" /></a>
                     &nbsp;&nbsp;&nbsp;
                     <!--Github-->
-                    <a class="pin-ic align-middle" href="https://github.com/CortoMaltese3/TeamProject">
+                    <a class="pin-ic align-middle" href="https://github.com">
                         <img src="https://image.flaticon.com/icons/svg/25/25231.svg" style="width:5%" />
                     </a>
 
