--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="page-item text-center form-text">BOOK YOUR COURT</h2>
-            <p class="text-center">Choose between a variety of football facilities all around Greece<br />Choose a pitch!</p>
+            <p class="text-center">Choose between a variety of football facilities all around Greece</p>
         </div>
     </div>
     <div class="row d-flex justify-content-around ">
