--- a/TeamProject/Views/Home/Contact.cshtml
+++ b/TeamProject/Views/Home/Contact.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+@section Styles{
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="~/Content/Contact.css" />
+    
+}
 <h2>@ViewBag.Title</h2>
-<h5>@ViewBag.Message</h5>
+<h6>@ViewBag.Message</h6>
 
 <div class="container">
     <div style="text-align:center">
@@ -11,12 +16,45 @@
 
     <div class="row">
         <div class="column">
-            <img src="~/Images/Contact/HQ.bmp" style="width:auto"/>
+            <img src="~/Images/Contact/HQ.bmp" style="width:auto" />
+            
+            <address>
+                <br />Omonoia 39<br />
+                Athina 105 64, Greece<br />
+                <abbr title="Phone">Phone:</abbr>
+                801-11-BookYourCourt
+            </address>
+
+            <address>
+                <strong>Fryni Boukouvala:</strong> <a href="mailto:fryniboukouvala@gmail.com">fryniboukouvala@gmail.com</a><br />
+                <strong>Giorgos Xiros:</strong>   <a href="mailto:geo.xiros@gmail.com">geo.xiros@gmail.com</a><br />
+                <strong>Giorgos Lymperopoulos:</strong> <a href="mailto:lympe7@hotmail.com">lympe7@hotmail.com</a><br />
+                <strong>Giorgos Chaniotakis:</strong> <a href="mailto:haniotinho@gmail.com">haniotinho@gmail.com</a><br />
+                <strong>Giorgos Kalomalos:</strong> <a href="mailto:giorgos.kalomalos@gmail.com">giorgos.kalomalos@gmail.com</a>
+            </address>
+
         </div>
         <div class="column">
             <form>
                 <label for="fname">First Name</label>
-                <input type="text" placeholder="Type your name"
+                <input type="text" id="fname" name="firstname" placeholder="Type your First name" />
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Type your Last name" />
+
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="Type your Email" />
+
+                <label for="subject">Subject</label>
+                <select id="subject" name="subject">
+                    <option value="newApplication">New Branch Application</option>
+                    <option value="technicalIssue">Technical Issue</option>
+                    <option value="generalInfo">General Information</option>
+                </select>
+
+                <label for="body">Body</label>
+                <textarea id="body" name="body" placeholder="Share your thoughts" style="height:170px"></textarea>
+                <input type="submit" value="Submit">
             </form>
 
         </div>
@@ -26,18 +64,3 @@
 </div>
 
 
-<address>
-    Omonoia 39<br />
-    Athina 105 64, Greece<br />
-    <abbr title="Phone">Phone:</abbr>
-    801-11-BookYourCourt
-</address>
-
-<address>
-    <strong>Fryni Boukouvala:</strong> <a href="mailto:fryniboukouvala@gmail.com">fryniboukouvala@gmail.com</a><br />
-    <strong>Giorgos Xiros:</strong>   <a href="mailto:geo.xiros@gmail.com">geo.xiros@gmail.com</a><br />
-    <strong>Giorgos Lymperopoulos:</strong> <a href="mailto:lympe7@hotmail.com">lympe7@hotmail.com</a><br />
-    <strong>Giorgos Chaniotakis:</strong> <a href="mailto:haniotinho@gmail.com">haniotinho@gmail.com</a><br />
-    <strong>Giorgos Kalomalos:</strong> <a href="mailto:giorgos.kalomalos@gmail.com">giorgos.kalomalos@gmail.com</a>
-
-</address>
