Added About us section
Check your profile pics!!

--- a/TeamProject/Content/Contact.css
+++ b/TeamProject/Content/Contact.css
@@ -42,3 +42,10 @@ input[type=submit]:hover {
         margin-top: 0;
     }
 }
+
+.group-item img {
+    float: left;
+    margin-right: auto;
+    width: 200px;
+    height: 200px;
+}
