--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -7,16 +7,16 @@
 
             <!-- Grid column -->
             <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">About us</a>
+                <h6 class="text-uppercase font-weight-bold">                    
+                    @Html.ActionLink("About us", "About", "Home")
                 </h6>
             </div>
             <!-- Grid column -->
-            <div class="col-md-2 mb-3">
+            @*<div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
                     <a href="#!">Products</a>
                 </h6>
-            </div>
+            </div>*@
             <!-- Grid column -->
             <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
