--- a/TeamProject/Views/Home/About.cshtml
+++ b/TeamProject/Views/Home/About.cshtml
@@ -9,14 +9,33 @@
 <h6>@ViewBag.Message</h6>
 
 <div class="container">
-    <div class="row">
-        <img src="~/Images/About/g_xiros.jpg" style=""height="200" width="200" />
-        <img src="~/Images/About/g_lymperopoulos.jpg" height="200" width="200" />
-        <img src="~/Images/About/f_boukouvala.jpg" height="200" width="200" />
+    <div class="row group-item img">
+        <figure>
+            <img src="~/Images/About/g_xiros.jpg" alt="No Image" />
+            <figcaption style="width:200px">Team Leader. Team Leader. Team Leader. Team Leader. Team Leader</figcaption>
+        </figure>
+
+        <figure>
+            <img src="~/Images/About/g_lymperopoulos.jpg" alt="No Image"/>
+            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+        </figure>
+
+        <figure>
+            <img src="~/Images/About/f_boukouvala.jpg" alt="No Image"/>
+            <figcaption style="width:200px">Spam your qualities. Spam your qualities here. Spam your qualities here.</figcaption>
+        </figure>
     </div>
     <br />
-    <div class="row">
-        <img src="~/Images/About/g_chaniotakis.jpg" height="200" width="200" />
-        <img src="~/Images/About/g_kalomalos.jpg" height="200" width="200" />
+
+    <div class="row group-item img">
+        <figure>
+            <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image" />
+            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+        </figure>
+
+        <figure>
+            <img src="~/Images/About/g_kalomalos.jpg" alt="No Image" />
+            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+        </figure>
     </div>
 </div>
