--- a/TeamProject/Views/Home/About.cshtml
+++ b/TeamProject/Views/Home/About.cshtml
@@ -3,39 +3,47 @@
 }
 @section Styles{
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link type="text/css" rel="stylesheet" href="~/Content/Contact.css" />
+    <link type="text/css" rel="stylesheet" href="~/Content/Contact.css" />    
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h6>@ViewBag.Message</h6>
+<hr />
 
 <div class="container">
     <div class="row group-item img">
-        <figure>
-            <img src="~/Images/About/g_xiros.jpg" alt="No Image" />
-            <figcaption style="width:200px">Team Leader. Team Leader. Team Leader. Team Leader. Team Leader</figcaption>
-        </figure>
-
-        <figure>
-            <img src="~/Images/About/g_lymperopoulos.jpg" alt="No Image"/>
-            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
-        </figure>
-
-        <figure>
-            <img src="~/Images/About/f_boukouvala.jpg" alt="No Image"/>
-            <figcaption style="width:200px">Spam your qualities. Spam your qualities here. Spam your qualities here.</figcaption>
-        </figure>
+        <div class="col-4">
+            <figure>
+                <img src="~/Images/About/g_xiros.jpg" alt="No Image" />
+                <figcaption style="width:200px">Team Leader. Team Leader. Team Leader. Team Leader. Team Leader</figcaption>
+            </figure>
+        </div>
+        <div class="col-4">
+            <figure>
+                <img src="~/Images/About/g_lymperopoulos.jpg" alt="No Image" />
+                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+            </figure>
+        </div>
+        <div class="col-4">
+            <figure>
+                <img src="~/Images/About/f_boukouvala.jpg" alt="No Image" />
+                <figcaption style="width:200px">Spam your qualities. Spam your qualities here. Spam your qualities here.</figcaption>
+            </figure>
+        </div>
     </div>
     <br />
 
     <div class="row group-item img">
-        <figure>
-            <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image" />
-            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
-        </figure>
-
-        <figure>
-            <img src="~/Images/About/g_kalomalos.jpg" alt="No Image" />
-            <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
-        </figure>
+        <div class="col-4">
+            <figure>
+                <img src="~/Images/About/g_chaniotakis.jpg" alt="No Image" />
+                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+            </figure>
+        </div>
+        <div class="col-4">
+            <figure>
+                <img src="~/Images/About/g_kalomalos.jpg" alt="No Image" />
+                <figcaption style="width:200px">Spam your qualities here. Spam your qualities here. Spam your qualities here</figcaption>
+            </figure>
+        </div>
     </div>
 </div>
