--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -24,11 +24,11 @@
                 </h6>
             </div>
             <!-- Grid column -->
-            <div class="col-md-2 mb-3">
+            @*<div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
                     <a href="#!">Help</a>
                 </h6>
-            </div>
+            </div>*@
             <!-- Grid column -->
             <div class="col-md-2 mb-3">
                 <h6 class="text-uppercase font-weight-bold">
