Changed layouts and added price to email configuration and confirmed layout

--- a/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
@@ -2,9 +2,9 @@
 @{
     ViewBag.Title = "Details";
 }
-<h2>Details</h2>
+<h2>Details Booking</h2>
 <div>
-    <h4>Booking</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
