--- a/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Branch</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Branch</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
