--- a/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Court</h2>
 
 
 @using (Html.BeginForm("Create", "Courts", FormMethod.Post, new { enctype = "multipart/form-data" })) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Court</h4>
+    
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
