--- a/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Details Court</h2>
 
 <div>
-    <h4>Court</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
