--- a/TeamProject/Areas/Admin/Views/Facilities/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Details Facility</h2>
 
 <div>
-    <h4>Facility</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
