--- a/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Facility</h2>
 
 
 @using (Html.BeginForm("Edit", "Facilities", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Facility</h4>
+    
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
