--- a/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Details TimeSlot</h2>
 
 <div>
-    <h4>TimeSlot</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
