--- a/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
@@ -42,7 +42,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-secondary" /> |
             @Html.ActionLink("Back to Users", "Index")
         </div>
     }
