--- a/TeamProject/Views/Courts/Confirmed.cshtml
+++ b/TeamProject/Views/Courts/Confirmed.cshtml
@@ -15,5 +15,8 @@
         <br />
         <br />
         <span>You can find the Court in @ViewBag.City at @ViewBag.address</span>
+        <br />
+        <br />
+        <span><strong>Cost :</strong> @Model.Court.Price&euro;</span>
     </div>
 </div>
