--- a/TeamProject/Views/Courts/Details.cshtml
+++ b/TeamProject/Views/Courts/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Court Details</h2>
 
 <div>
-    <h4>Court</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -62,5 +61,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Courts", "Index", "Courts", new { id = Model.Branch.Id }, null)
 </p>
